[metadata]
name = pve_balance
version = 1.0
description = Automatically balance VMs in a Proxmox Virtual Environment cluster
license = BSD-2
author = Jan-Philipp Litza (PLUTEX)
author_email = jpl@plutex.de

[options]
packages = pve_balance
install_requires =
    proxmoxer
    requests
    paramiko

[options.entry_points]
console_scripts =
    pve_balance = pve_balance.__main__:main
